--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,12 @@
 
 ###> symfony/framework-bundle ###
-.env
+/.env
 /.env.local
 /.env.local.php
 /.env.*.local
 /config/secrets/prod/prod.decrypt.private.php
 /public/bundles/
+/public/.htaccess
 /var/
 /vendor/
 ###< symfony/framework-bundle ###
